# ai-tesi

./: .ai-instructions  .gitignore  .pre-commit-config.yaml  AI_ARCHITECTURE_ANALYSIS.md  CHANGELOG_WAVE1_RC.md  CLAUDE.md  CLEANUP_PHASE_B_COMPLETE.md  CLEANUP_REPORT.md  DEBUG_SESSION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DESIGN.md  ERROR_INVESTIGATION_REPORT.md  FIXES_IMPLEMENTATION_REPORT.md  LOCAL_SETUP_GUIDE.md  PHASE_0_DIAGNOSTIC_REPORT.md  PHASE_0_FIX_REPORT.md  PHASE_1.2_QUALITY_GATE_AUDIT_REPORT.md  PROBLEMS_AND_ERRORS_LOG.md  PRODUCTION_DEPLOYMENT_PLAN.md  PROJECT_AUDIT_REPORT.md  PROJECT_COMPLIANCE_REPORT.md  PROJECT_UPDATE.md  QA_VERIFICATION_REPORT.md  QUALITY_GATE.md  QUICK_START.md  README.md  REPOSITORY_CLEANUP_INVENTORY.md  RUNTIME_VERIFICATION_RESULTS.txt  SMOKE_TEST_REPORT_2026-02-24.md  SMOKE_TEST_SUMMARY.md  START_HERE.md  TESIGO-PLAN.md  TESTING_RESULTS.md  THESICA-PLAN.md  check-health.sh  coverage.xml  docker-compose.test.yml  docker_config_analysis.txt  maxmaxvel-main-design-20260621-163916.md  pytest.ini  (+14 more)
apps/api/: .coverage  .coveragerc  .dockerignore  .env.backup  .env.backup-before-keys  .env.backup2  .env.backup3  .env.backup4  .env.backup5  .env.bak  .env.example  .env.production.example  .env.template  .flake8  Dockerfile  QA_SUMMARY.md  SETUP.md  check_api_keys.py  coverage.xml  fix_remaining_tests.py  main.py  mypy.ini  pyproject.toml  requirements.txt  test_apis_final.sh  test_external_services.py  test_openai_direct.py
apps/api/app/: __init__.py
apps/api/evals/: common.py  run_citation_eval.py  run_claim_eval.py
apps/api/migrations/: 001_admin_panel_models.sql  002_add_password_hash.sql  003_add_quality_scores.sql  004_add_ai_detection_score.sql  005_add_missing_columns.sql  006_add_quality_score.sql  007_provenance_and_verification.sql  008_claim_verification.sql  009_quality_panel.sql  010_production_cases_release_gates_editor_tasks.sql  011_upfront_source_pack.sql  012_section_bibliography.sql  013_document_additional_requirements.sql  014_document_citation_style.sql  015_active_generation_job_unique_index.sql  016_requirements_file_processed.sql  017_released_artifact_snapshot.sql  018_document_delete_foreign_keys.sql  019_production_case_release_version.sql  020_durable_generation_jobs.sql  021_artifact_content_hashes.sql  022_generation_fencing_and_section_uniqueness.sql  023_user_deletion_generation_guard.sql  024_artifact_deletion_outbox.sql  025_document_source_files.sql  026_task_contract.sql  027_verified_source_pack.sql  README.md
apps/api/scripts/: grounding_report.py  smoke_external_services.py  smoke_real_api.py
apps/api/tests/: conftest.py  test_admin_auth_endpoints.py  test_admin_documents_endpoints.py  test_admin_endpoints.py  test_admin_payments_endpoints.py  test_admin_production_cases_endpoints.py  test_admin_service.py  test_ai_pipeline_integration.py  test_ai_service.py  test_ai_service_extended.py  test_api_endpoints.py  test_api_integration.py  test_api_integration_simple.py  test_artifact_deletion_outbox.py  test_async_generation.py  test_auth_login_token_uniqueness.py  test_auth_no_token.py  test_auth_refresh.py  test_auth_service_extended.py  test_background_jobs_recovery.py  test_bibliography_export.py  test_checkpoint_recovery.py  test_circuit_breaker.py  test_citation_closure.py  (+66 more)
(+652 files in other folders)
